// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildSummaryQuery 7d preset produces interval filter 1`] = `
"SELECT
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  countIf(event = 'shipwright_ci_result') AS ci_gates_total,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  countIf(event = 'shipwright_simplify_complete') AS simplify_total,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_total_fixes,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews_total,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 1) AS complexity_1,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 2) AS complexity_2,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 3) AS complexity_3,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 4) AS complexity_4,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 5) AS complexity_5,
  avgIf(toFloatOrZero(toString(properties.fix_cascade_depth)), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND isNotNull(properties.fix_cascade_depth)) AS avg_fix_cascade_depth
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')"
`;

exports[`buildSummaryQuery 30d preset produces interval filter 1`] = `
"SELECT
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  countIf(event = 'shipwright_ci_result') AS ci_gates_total,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  countIf(event = 'shipwright_simplify_complete') AS simplify_total,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_total_fixes,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews_total,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 1) AS complexity_1,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 2) AS complexity_2,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 3) AS complexity_3,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 4) AS complexity_4,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 5) AS complexity_5,
  avgIf(toFloatOrZero(toString(properties.fix_cascade_depth)), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND isNotNull(properties.fix_cascade_depth)) AS avg_fix_cascade_depth
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 30 day, 'America/Los_Angeles')"
`;

exports[`buildSummaryQuery today preset produces correct date filter 1`] = `
"SELECT
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  countIf(event = 'shipwright_ci_result') AS ci_gates_total,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  countIf(event = 'shipwright_simplify_complete') AS simplify_total,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_total_fixes,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews_total,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 1) AS complexity_1,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 2) AS complexity_2,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 3) AS complexity_3,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 4) AS complexity_4,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 5) AS complexity_5,
  avgIf(toFloatOrZero(toString(properties.fix_cascade_depth)), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND isNotNull(properties.fix_cascade_depth)) AS avg_fix_cascade_depth
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now(), 'America/Los_Angeles') AND timestamp < toStartOfDay(now(), 'America/Los_Angeles') + interval 1 day"
`;

exports[`buildSummaryQuery custom range produces literal timestamp filter 1`] = `
"SELECT
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  countIf(event = 'shipwright_ci_result') AS ci_gates_total,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  countIf(event = 'shipwright_simplify_complete') AS simplify_total,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_total_fixes,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews_total,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 1) AS complexity_1,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 2) AS complexity_2,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 3) AS complexity_3,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 4) AS complexity_4,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND toFloatOrZero(toString(properties.complexity)) = 5) AS complexity_5,
  avgIf(toFloatOrZero(toString(properties.fix_cascade_depth)), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND isNotNull(properties.fix_cascade_depth)) AS avg_fix_cascade_depth
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toDateTime('2026-04-01 00:00:00', 'America/Los_Angeles') AND timestamp <= toDateTime('2026-04-03 23:59:59', 'America/Los_Angeles')"
`;

exports[`buildSummaryCycleTimeQuery 7d preset produces interval filter on the completion timestamp 1`] = `
"SELECT avg(dateDiff('hour', properties.started_at, properties.ts)) AS avg_cycle_time_hours
FROM events
WHERE event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')
  AND dateDiff('hour', properties.started_at, properties.ts) > 0"
`;

exports[`buildTrendsQuery 90d preset produces 90 day interval filter 1`] = `
"SELECT
  toDate(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 90 day, 'America/Los_Angeles')
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery defaults to day grouping 1`] = `
"SELECT
  toDate(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery day grouping uses toDate 1`] = `
"SELECT
  toDate(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 30 day, 'America/Los_Angeles')
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery week grouping uses toStartOfWeek 1`] = `
"SELECT
  toStartOfWeek(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now() - interval 30 day, 'America/Los_Angeles')
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery today preset with day grouping 1`] = `
"SELECT
  toDate(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now(), 'America/Los_Angeles') AND timestamp < toStartOfDay(now(), 'America/Los_Angeles') + interval 1 day
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery custom range with week grouping 1`] = `
"SELECT
  toStartOfWeek(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toDateTime('2026-03-01 00:00:00', 'America/Los_Angeles') AND timestamp <= toDateTime('2026-04-01 23:59:59', 'America/Los_Angeles')
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildTrendsQuery hour grouping uses toStartOfHour 1`] = `
"SELECT
  toStartOfHour(toTimeZone(timestamp, 'America/Los_Angeles')) AS period,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_completed,
  countIf(event = 'shipwright_ci_result') AS ci_gates,
  countIf(event = 'shipwright_ci_result' AND toString(properties.passed_first_try) = 'true') AS ci_first_pass,
  countIf(event = 'shipwright_ci_result' AND toString(properties.first_pass) = 'true') AS ci_first_pass_count,
  countIf(event = 'shipwright_simplify_complete') AS simplify_passes,
  sum(IF(event = 'shipwright_simplify_complete', toFloat(properties.total_fixes), 0)) AS simplify_fixes,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS reviews,
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete') AND properties.verdict = 'SHIP IT') AS reviews_ship_it,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), coalesce(properties.actual_h, dateDiff('minute', properties.started_at, properties.ts) / 60.0), NULL)) AS avg_actual_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.estimated_h), NULL)) AS avg_estimated_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), properties.retries, NULL)) AS avg_retries,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), toFloat(properties.files_changed), NULL)) AS avg_files_changed,
  avg(IF(event = 'shipwright_ci_result', toFloat(properties.fix_attempts), NULL)) AS avg_fix_attempts,
  avgIf(dateDiff('hour', properties.started_at, properties.ts), event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed') AND dateDiff('hour', properties.started_at, properties.ts) > 0) AS avg_cycle_time_hours,
  avg(IF(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed'), IF(toFloat(properties.estimated_h) > 0, toFloat(properties.actual_h) / toFloat(properties.estimated_h), NULL), NULL)) AS estimation_accuracy,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dry), NULL)) AS simplify_avg_dry,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.dead_code), NULL)) AS simplify_avg_dead_code,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.naming), NULL)) AS simplify_avg_naming,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.complexity_fixes), NULL)) AS simplify_avg_complexity,
  avg(IF(event = 'shipwright_simplify_complete', toFloat(properties.consistency), NULL)) AS simplify_avg_consistency,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_blocked', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_pr_created', 'shipwright_ci_result', 'shipwright_simplify_complete')
  AND timestamp >= toStartOfDay(now(), 'America/Los_Angeles') AND timestamp < toStartOfDay(now(), 'America/Los_Angeles') + interval 1 day
GROUP BY period
ORDER BY period ASC"
`;

exports[`buildFeaturesTasksQuery 7d preset produces interval filter 1`] = `
"SELECT
  extract(coalesce(toString(properties.task_id), toString(properties.task)), '^([A-Z]+)-') AS feature_prefix,
  count() AS tasks_completed,
  avg(properties.actual_h) AS avg_actual_h,
  avg(properties.estimated_h) AS avg_estimated_h
FROM events
WHERE event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')
  AND match(coalesce(toString(properties.task_id), toString(properties.task)), '^[A-Z]+-[0-9]+\\\\.[0-9]+$')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')
GROUP BY feature_prefix
ORDER BY tasks_completed DESC"
`;

exports[`buildFeaturesCiQuery 7d preset produces interval filter 1`] = `
"SELECT
  extract(coalesce(toString(properties.task_id), toString(properties.task)), '^([A-Z]+)-') AS feature_prefix,
  count() AS ci_total,
  countIf(toString(properties.passed_first_try) = 'true') AS ci_first_pass
FROM events
WHERE event = 'shipwright_ci_result'
  AND match(coalesce(toString(properties.task_id), toString(properties.task)), '^[A-Z]+-[0-9]+\\\\.[0-9]+$')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')
GROUP BY feature_prefix"
`;

exports[`buildFeaturesReviewsQuery 7d preset produces interval filter 1`] = `
"SELECT
  extract(coalesce(toString(properties.task_id), toString(properties.task)), '^([A-Z]+)-') AS feature_prefix,
  count() AS reviews_total,
  countIf(properties.verdict = 'SHIP IT') AS reviews_ship_it
FROM events
WHERE event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')
  AND match(coalesce(toString(properties.task_id), toString(properties.task)), '^[A-Z]+-[0-9]+\\\\.[0-9]+$')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')
GROUP BY feature_prefix"
`;

exports[`buildQueueFunnelQuery 7d preset produces interval filter 1`] = `
"SELECT
  countIf(event = 'shipwright_task_started') AS tasks_started,
  countIf(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete')) AS tasks_approved,
  countIf(event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')) AS tasks_merged,
  countIf(event = 'shipwright_task_blocked') AS tasks_blocked,
  avg(IF(event IN ('shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete'), toFloat(properties.findings), NULL)) AS avg_review_findings
FROM events
WHERE event IN ('shipwright_task_started', 'shipwright_task_approved', 'shipwright_task_reviewed', 'shipwright_review_complete', 'shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed', 'shipwright_task_blocked')
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')"
`;

exports[`buildQueueCycleStartedQuery 7d preset produces interval filter 1`] = `
"SELECT
  coalesce(toString(properties.task_id), toString(properties.task)) AS task_id,
  timestamp
FROM events
WHERE event = 'shipwright_task_started'
  AND isNotNull(coalesce(toString(properties.task_id), toString(properties.task)))
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')"
`;

exports[`buildQueueCycleMergedQuery 7d preset produces interval filter 1`] = `
"SELECT
  coalesce(toString(properties.task_id), toString(properties.task)) AS task_id,
  timestamp
FROM events
WHERE event IN ('shipwright_task_merged', 'shipwright_task_complete', 'shipwright_task_completed')
  AND isNotNull(coalesce(toString(properties.task_id), toString(properties.task)))
  AND timestamp >= toStartOfDay(now() - interval 7 day, 'America/Los_Angeles')"
`;
